<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/app_bar_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help_button_title"
            app:showAsAction="always"/>
    <item
            android:id="@+id/app_bar_load"
            android:icon="@drawable/icon_open_file"
            android:title="@string/load_button_title"
            app:showAsAction="always"/>
    <item
            android:id="@+id/app_bar_save"
            android:icon="@drawable/icon_save"
            android:title="@string/save_button_title"
            app:showAsAction="always"/>
    <item
            android:id="@+id/app_bar_go"
            android:icon="@drawable/icon_play"
            android:title="@string/play_button_title"
            app:showAsAction="always"/>
    <item
            android:id="@+id/app_bar_next_step"
            android:icon="@drawable/icon_next_step"
            android:title="@string/one_step_button_title"
            app:showAsAction="always"/>
    <item
            android:id="@+id/app_bar_trace"
            android:icon="@drawable/icon_trace"
            android:title="@string/trace_button_title"
            android:checkable="true"
            app:showAsAction="always"/>
    <!-- TODO: find/write decent color picker
    <view
            android:id="@+id/app_bar_change_color"
            android:icon="@drawable/icon_change_color"
            android:title="@string/change_color_button_title"
            app:showAsAction="always"/>
    -->
    <item
            android:id="@+id/app_bar_clear"
            android:icon="@drawable/icon_erase"
            android:title="@string/clear_button_title"
            app:showAsAction="always"/>
    <item
            android:id="@+id/app_bar_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings_button_title"
            app:showAsAction="always"/>
</menu>
