<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <item
            android:id="@+id/to_parent_dir"
            android:title="@string/to_parent_dir_title"
            android:icon="@drawable/ic_arrow_upward"
            app:showAsAction="ifRoom"
    />
    <item
            android:id="@+id/import_ddus"
            android:title="@string/import_ddus_title"
            android:icon="@drawable/ic_import"
            app:showAsAction="ifRoom"
    />
    <!-- Android >= 5.0 -->
    <item
            android:id="@+id/export_ddus"
            android:title="@string/export_ddus_title"
            android:icon="@drawable/ic_export"
            app:showAsAction="ifRoom"
    />
    <!-- Android >= 5.0 -->
    <item
            android:id="@+id/import_dir"
            android:title="@string/import_folder_title"
            android:icon="@drawable/ic_add_folder"
            app:showAsAction="ifRoom"
    />
    <item
            android:id="@+id/delete_ddus"
            android:title="@string/delete_ddus"
            android:icon="@drawable/ic_delete"
            app:showAsAction="ifRoom"
    />
    <item
            android:id="@+id/toggle_folders"
            android:title="@string/toggle_folders"
            app:showAsAction="never"
    />
</menu>